2013-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.c (set_window_buffer): Update mode line (bug#16084).

2013-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* keyboard.c (poll_for_input_1, input_polling_used):
	Define only if HAVE_NTGUI.
	* xmenu.c (popup_activate_callback): Omit unnecessary
	check against USE_X_TOOLKIT, which must be defined here anyway.
	* xterm.c, xterm.h (x_dispatch_event) [! (USE_X_TOOLKIT || USE_MOTIF)]:
	Now static.

2013-12-07  Martin Rudalics  <rudalics@gmx.at>

	* w32term.c (w32_read_socket): Fix int/Lisp_Object type mixup.

2013-12-07  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (tb_size_cb): Call xg_height_or_width_changed.

	* nsterm.m (x_set_window_size): Remove fprintf.
	(init): Define always.  Set applicationDidFinishLaunchingCalled
	for GNUStep.
	(applicationDidFinishLaunching:):
	Set applicationDidFinishLaunchingCalled.
	(applicationDidBecomeActive:): Call applicationDidFinishLaunching if
	not called.

	* nsterm.h (EmacsApp): Add applicationDidFinishLaunchingCalled.

	Pixel resize changes for NS (Bug#16049).
	* nsterm.m (x_set_window_size): Change parameters rows/cols to
	height/width.  row/cols are locals.
	Pass pixelwise to check_frame_size.  Don't set FRAME_PIXEL_WIDTH/HEIGHT.
	(updateFrameSize:): Remove gsextra.  Adjust for pixelwise resize.
	(windowWillResize): Remove gsextra.  Calculate extra as in
	updateFrameSize.
	(x_new_font): Don't change frame size if fullscreen.
	Change size pixelwise.

	* nsfns.m (Fx_create_frame): Call change_frame_size twice as per
	comment in xfns.c.  Change to pixelwise call.

2013-12-06  Eli Zaretskii  <eliz@gnu.org>

	* buffer.c (Fset_buffer_multibyte): Invalidate buffer caches.
	(Bug#16070)

2013-12-06  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.c (input_signal_count): Remove.
	(x_dispatch_event): Define unconditionally.
	(x_make_frame_visible): Process X events until the frame
	is really visible (Bug#16027).