@@ -1,3 +1,11 @@
+2013-12-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* frame.h (SET_FRAME_VISIBLE): Now an inline function.
+	The macro didn't conform to C99 due to type mismatch,
+	which caused compilation failure with Sun C 5.12,
+	and it was confusing anyway.  Include window.h to declare
+	redisplay_other_windows.
+
 2013-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* window.c (set_window_buffer): Update mode line (bug#16084).
